# cinelerra-ak

./: Makefile.am  cinelerra-cva-current.spec.in  configure.ac  configure.in
cinelerra/: Makefile.am  aboutprefs.C  asset.C  assetedit.C  audioalsa.C  awindowgui.C  batchrender.C  browsebutton.C  channeldb.C  cwindow.C  cwindowgui.C  cwindowtool.C  defaultformats.h  device1394output.C  edlsession.C  ffmpeg.C  ffmpeg.h  file.C  file.inc  fileac3.C  fileavi.C  filebase.C  filebase.h  filebaseaudio.C  filebaseima4.C  filebaseulaw.C  filecr2.C  filedv.C  fileexr.C  fileffmpeg.C  fileffmpeg.h  filejpeg.C  filelist.C  filemov.C  filempeg.C  fileogg.C  filepng.C  filesndfile.C  filetga.C  filethread.C  (+37 more)
cinelerra/data/: about_bg_png.h  about_png.h  heroine_logo12_png.h  lad_picon_png.h
customize/theme-helper/: .gitignore  License  README  buildtheme.sh  global_updater.sh
customize/theme-helper/backup/: redo.sh
customize/theme-helper/essentials/: INSTALL  bin2cinelerra_header.c  colors.txt
customize/theme-helper/essentials/old-scripts/: guicast.sh  make-plugins-icons  plugins.sh  theme.sh  themebuilder.sh  update-plugins.sh  update-theme.sh
customize/theme-helper/global/plugins/: README
customize/theme-helper/model/MODEL/data/: Makefile.am
customize/theme-helper/themes/: blonde-cv.btheme  bluedot.btheme  hulk.btheme  pinklady.btheme  suv.btheme
doc/: cinelerra_cv_manual_en.texi  cinelerra_cv_manual_fr.texi  cinelerra_cv_manual_pt_BR.texi
guicast/: Makefile.am  arraylist.h  bcfilebox.C  bcresources.C  bcresources.h  bctextbox.C  bctextbox.h  bcwindowbase.C  bcwindowbase.h  bcwindowdraw.C  clip.h  error.h
guicast/images/: file_film_png.h  file_folder_png.h  file_sound_png.h  file_unknown_png.h
image/: Makefile.am  cinelerra-cv  cinelerra-cv.conf  cinelerra-cv.desktop  cinelerra-cv.desktop.in  cinelerra-cv.in  cinelerra-cva.desktop.in  cinelerra-cva.in
libmpeg3/: Makefile.am  libmpeg3.c
mpeg2enc/: Makefile.am
mplexlo/: Makefile.am
plugins/: Makefile.am
plugins/1080to540/: 1080to540.C
plugins/720to480/: 720to480.C
plugins/C41/: c41.C
plugins/bandslide/: bandslide.C
plugins/bandwipe/: bandwipe.C
plugins/bluebanana/: bluebanana.C
plugins/bluedottheme/: Makefile.am  bluedottheme.C  bluedottheme.h
plugins/blur/: blur.C
plugins/brightness/: brightness.C
plugins/cdripper/: cdripper.C
plugins/chromakey/: chromakey.C
plugins/chromakeyhsv/: chromakey.C
plugins/colorbalance/: colorbalance.C
plugins/compressor/: compressor.C
plugins/decimate/: decimate.C
plugins/defaulttheme/: Makefile.am  defaulttheme.h
plugins/defaulttheme/data/: Makefile.am
plugins/deinterlace/: deinterlace.C
plugins/delayaudio/: delayaudio.C
plugins/delayvideo/: delayvideo.C
plugins/denoise/: denoise.C
plugins/denoisefft/: denoisefft.C
plugins/denoisemjpeg/: denoisemjpeg.C
plugins/denoiseseltempavg/: seltempavg.C
plugins/denoisevideo/: denoisevideo.C
plugins/diffkey/: diffkey.C
plugins/downsample/: downsample.C
plugins/fieldframe/: fieldframe.C
plugins/flip/: flip.C
plugins/framefield/: framefield.C
plugins/freeverb/: freeverb.C
plugins/freezeframe/: freezeframe.C
plugins/gamma/: gamma.C
plugins/gradient/: gradient.C
plugins/histogram/: histogram.C
plugins/huesaturation/: huesaturation.C
plugins/hulktheme/: Makefile.am  hulktheme.C  hulktheme.h
plugins/interpolate/: interpolate.C
plugins/interpolatevideo/: interpolatevideo.C
plugins/invertvideo/: invert.C
plugins/irissquare/: irissquare.C
plugins/ivtc/: ivtc.C
plugins/lens/: lens.C
plugins/level/: leveleffect.C
plugins/linearblur/: linearblur.C
plugins/livevideo/: livevideo.C
plugins/loopaudio/: loopaudio.C
plugins/loopvideo/: loopvideo.C
plugins/motion/: motion.C
plugins/motionblur/: motionblur.C
plugins/normalize/: normalize.C
plugins/oilpainting/: oil.C
plugins/overlay/: overlay.C
plugins/overlayaudio/: overlayaudio.C
plugins/parametric/: parametric.C
plugins/perspective/: perspective.C
plugins/pinkladytheme/: Makefile.am
plugins/pinkladytheme/data/: Makefile.am
plugins/pitch/: pitch.C
plugins/polar/: polar.C
plugins/quark/: quark.C
plugins/radialblur/: radialblur.C
plugins/reframe/: reframe.C
plugins/reframert/: reframert.C
plugins/reroute/: reroute.C
plugins/resample/: resample.C
plugins/reverseaudio/: reverseaudio.C
plugins/reversevideo/: reversevideo.C
plugins/rgb601/: rgb601.C
plugins/rotate/: rotate.C
plugins/scale/: scale.C
plugins/shapewipe/: BAR-License.txt  Fleur-de-lis-of-Florence-License.txt  HJ-license.txt  JST-License.txt  Makefile.am  shapewipe.C  spirally1-license.txt  swirl1-license.txt
plugins/sharpen/: sharpen.C
plugins/shiftinterlace/: shiftinterlace.C
plugins/slide/: slide.C
plugins/spectrogram/: spectrogram.C
plugins/svg/: svg.C  svg.h  svgwin.C  svgwin.h
plugins/swapchannels/: swapchannels.C
plugins/synthesizer/: synthesizer.C
plugins/theme-blond/: Makefile.am  defaulttheme.C
plugins/theme-blue/: Makefile.am
plugins/theme-blue/data/: Makefile.am
plugins/theme-hulk/data/: Makefile.am
plugins/theme-pinklady/: Makefile.am  pinkladytheme.C  pinkladytheme.h
plugins/theme-unflat/: Makefile.am  unflattheme.h
plugins/threshold/: threshold.C
plugins/timeavg/: timeavg.C
plugins/timefront/: timefront.C
plugins/timestretch/: timestretch.C
plugins/titler/: Makefile.am  title.C  title.h  titlewindow.C  titlewindow.h
plugins/translate/: translate.C
plugins/unflattheme/: Makefile.am  unflattheme.C
plugins/unflattheme/data/: Makefile.am
plugins/unsharp/: unsharp.C
plugins/videoscope/: videoscope.C
plugins/wave/: wave.C
plugins/whirl/: whirl.C
plugins/wipe/: wipe.C
plugins/yuv/: yuv.C
plugins/zoomblur/: zoomblur.C
po/: Makevars  de.po  es.po  eu.po  fr.po  it.po  nb.po  pt_BR.po  ru.po  sl.po
quicktime/: Makefile.am  cmodel_default.c  cmodel_permutation.h  mpeg4.c  qtffmpeg.c  wma.c
quicktime/ffmpeg/: Makefile  VERSION  common.mak  configure
quicktime/ffmpeg/libavformat/: utils.c
toolame-02l/: Makefile.am
(+5 files in other folders)
