noinst_LIBRARIES = libimagedata.a
libimagedata_a_SOURCES =
nodist_libimagedata_a_SOURCES = unflattheme.data

PNGS = \
	arrow.png \
	 autokeyframe.png \
	 bar.png \
	 batchcancel_dn.png \
	 batchcancel_hi.png \
	 batchcancel_up.png \
	 batchstart_dn.png \
	 batchstart_hi.png \
	 batchstart_up.png \
	 batchstop_dn.png \
	 batchstop_hi.png \
	 batchstop_up.png \
	 blank30x30.png \
	 bottom_justify.png \
	 camerakeyframe.png \
	 camera.png \
	 cancel.png \
	 cbuttons_left.png \
	 cbuttons_right.png \
	 center_justify.png \
	 channel_bg.png \
	 channel_position.png \
	 channel.png \
	 checkbox_checkedhi.png \
	 checkbox_checked.png \
	 checkbox_dn.png \
	 checkbox_hi.png \
	 checkbox_up.png \
	 clip_icon.png \
	 closetip.png \
	 cmeter_bg.png \
	 column_dn.png \
	 column_hi.png \
	 column_up.png \
	 copy.png \
	 cpanel_bg.png \
	 cpanel_checkedhi.png \
	 cpanel_checked.png \
	 cpanel_dn.png \
	 cpanel_hi.png \
	 cpanel_up.png \
	 crop.png \
	 cut.png \
	 cwindow_active.png \
	 cwindow_inactive.png \
	 delete.png \
	 drawpatch.png \
	 editpanel_checkedhi.png \
	 editpanel_checked.png \
	 editpanel_dn.png \
	 editpanel_hi.png \
	 editpanel_up.png \
	 end.png \
	 expandpatch_checkedhi.png \
	 expandpatch_checked.png \
	 expandpatch_dn.png \
	 expandpatch_hi.png \
	 expandpatch_up.png \
	 eyedrop.png \
	 fastfwd.png \
	 fastrev.png \
	 filebox_bigbutton_dn.png \
	 filebox_bigbutton_hi.png \
	 filebox_bigbutton_up.png \
	 fileboxbutton_dn.png \
	 fileboxbutton_hi.png \
	 fileboxbutton_up.png \
	 fitautos.png \
	 fit.png \
	 folder.png \
	 framefwd.png \
	 framerev.png \
	 gangpatch.png \
	 generic_dn.png \
	 generic_hi.png \
	 generic_up.png \
	 goto.png \
	 heroine_icon.png \
	 hscroll_handle_bg.png \
	 hscroll_handle_dn.png \
	 hscroll_handle_hi.png \
	 hscroll_handle_up.png \
	 hscroll_left_dn.png \
	 hscroll_left_hi.png \
	 hscroll_left_up.png \
	 hscroll_right_dn.png \
	 hscroll_right_hi.png \
	 hscroll_right_up.png \
	 hslider_bg_dn.png \
	 hslider_bg_hi.png \
	 hslider_bg_up.png \
	 hslider_fg_dn.png \
	 hslider_fg_hi.png \
	 hslider_fg_up.png \
	 ibeam.png \
	 icons.png \
	 in_checkedhi.png \
	 in_checked.png \
	 in_dn.png \
	 in_hi.png \
	 inpoint.png \
	 in_up.png \
	 keyframe3.png \
	 label_checkedhi.png \
	 label_checked.png \
	 label.png \
	 labeltoggle_dn.png \
	 labeltoggle_uphi.png \
	 labeltoggle_up.png \
	 left_justify.png \
	 listbox_button.png \
	 listbox_dn.png \
	 listbox_up.png \
	 locklabels_dn.png \
	 locklabels_lockedhi.png \
	 locklabels_locked.png \
	 locklabels_unlockedhi.png \
	 locklabels_unlocked.png \
	 magnify.png \
	 maskkeyframe.png \
	 mask.png \
	 mbutton_bg.png \
	 mclock_flat.png \
	 menubar_bg.png \
	 menubar_dn.png \
	 menubar_hi.png \
	 menubar_up.png \
	 menuitem_dn.png \
	 menuitem_hi.png \
	 menuitem_up.png \
	 menu_popup_bg.png \
	 middle_justify.png \
	 mode_add.png \
	 mode_divide.png \
	 mode_dn.png \
	 mode_hi.png \
	 modekeyframe.png \
	 mode_max.png \
	 mode_multiply.png \
	 mode_normal.png \
	 mode_replace.png \
	 mode_subtract.png \
	 mode_up.png \
	 mscroll_filler.png \
	 mutepatch_checkedhi.png \
	 mutepatch_checked.png \
	 mutepatch_dn.png \
	 mutepatch_hi.png \
	 mutepatch_up.png \
	 new_bg.png \
	 new_bigbutton_dn.png \
	 new_bigbutton_hi.png \
	 new_bigbutton_up.png \
	 nextlabel.png \
	 nexttip.png \
	 ok.png \
	 openfolder.png \
	 out_checkedhi.png \
	 out_checked.png \
	 out_dn.png \
	 out_hi.png \
	 outpoint.png \
	 out_up.png \
	 over.png \
	 overwrite.png \
	 pan_channel_small.png \
	 pan_channel.png \
	 panel_divider.png \
	 pan_hi.png \
	 pankeyframe.png \
	 pan_popup.png \
	 pan_stick_small.png \
	 pan_stick.png \
	 pan_up.png \
	 paste.png \
	 patchbay_bg.png \
	 patch_checkedhi.png \
	 patch_checked.png \
	 patch_dn.png \
	 patch_hi.png \
	 patch_up.png \
	 pause.png \
	 playpatch.png \
         playpatch_up.png \
	 playpatch_hi.png \
	 playpatch_checked.png \
	 playpatch_dn.png \
	 playpatch_checkedhi.png \
	 play.png \
	 plugin_bg.png \
	 plugin_ondn.png \
	 plugin_onhi.png \
	 plugin_onselecthi.png \
	 plugin_onselect.png \
	 plugin_on.png \
	 plugin_showdn.png \
	 plugin_showhi.png \
	 plugin_showselecthi.png \
	 plugin_showselect.png \
	 plugin_show.png \
	 pot_dn.png \
	 pot_hi.png \
	 pot_up.png \
	 preferences_bg.png \
	 preferencesbutton_dnhi.png \
	 preferencesbutton_dnlo.png \
	 preferencesbutton_dn.png \
	 preferencesbutton_uphi.png \
	 preferencesbutton_up.png \
	 prevlabel.png \
	 prevtip.png \
	 progress_bg.png \
	 progress_hi.png \
	 projectorkeyframe.png \
	 projector.png \
	 protect.png \
	 radial_checkedhi.png \
	 radial_checked.png \
	 radial_dn.png \
	 radial_hi.png \
	 radial_up.png \
	 recordgui_batch.png \
	 recordgui_controls.png \
	 recordgui_list.png \
	 recordmonitor_meters.png \
	 recordmonitor_panel.png \
	 recordpatch.png \
         recordpatch_up.png \
	 recordpatch_hi.png \
	 recordpatch_checked.png \
	 recordpatch_dn.png \
	 recordpatch_checkedhi.png \
	 record.png \
	 redo.png \
	 reload.png \
	 resource1024.png \
	 resource128.png \
	 resource256.png \
	 resource32.png \
	 resource512.png \
	 resource64.png \
	 reverse.png \
	 rewind.png \
	 right_justify.png \
	 ruler.png \
	 setformat_bg.png \
	 show_meters.png \
	 singleframe.png \
	 splice.png \
	 statusbar_cancel_dn.png \
	 statusbar_cancel_hi.png \
	 statusbar_cancel_up.png \
	 statusbar.png \
	 stop.png \
	 swap_extents.png \
	 tan_linear.png \
	 tan_smooth.png \
	 text_highlight.png \
	 text.png \
	 timebar_bg_flat.png \
	 timebar_brender.png \
	 timebar_view.png \
	 tipbutton_dn.png \
	 tipbutton_hi.png \
	 tipbutton_up.png \
	 title_bg.png \
	 titlesafe.png \
	 toclip.png \
	 toolwindow.png \
	 top_justify.png \
	 transportdn.png \
	 transporthi.png \
	 transportup.png \
	 tumble_bottom.png \
	 tumble_hi.png \
	 tumble_top.png \
	 tumble_up.png \
	 undo.png \
	 updir.png \
	 vbuttons_left.png \
	 vclock.png \
	 vscroll_handle_bg.png \
	 vscroll_handle_dn.png \
	 vscroll_handle_hi.png \
	 vscroll_handle_up.png \
	 vscroll_left_dn.png \
	 vscroll_left_hi.png \
	 vscroll_left_up.png \
	 vscroll_right_dn.png \
	 vscroll_right_hi.png \
	 vscroll_right_up.png \
	 vwindow_timebar.png \
	 wrench.png \
	 xmeter_green.png \
	 xmeter_normal.png \
	 xmeter_over.png \
	 xmeter_red.png \
	 xmeter_white.png \
	 xmeter_yellow.png \
	 ymeter_green.png \
	 ymeter_normal.png \
	 ymeter_over.png \
	 ymeter_red.png \
	 ymeter_white.png \
	 ymeter_yellow.png \
	 zoompopup_dn.png \
	 zoompopup_hi.png \
	 zoompopup_up.png \
	 zoomtumble_bottom.png \
	 zoomtumble_hi.png \
	 zoomtumble_top.png \
	 zoomtumble_up.png

# this rule creates the .o file from the concatenated PNGs
.data.$(OBJEXT):
	$(OBJCOPY) -I binary -B $(OBJCOPYARCH) -O $(OBJCOPYTARGET) $< $@

unflattheme.data: $(PNGS)
	$(top_builddir)/guicast/bootstrap $@ $^ || { rm -f $@; exit 1; }

clean-local:
	rm -f unflattheme.data
 
EXTRA_DIST = \
	$(PNGS) \
	Source
