noinst_LIBRARIES = libimagedata.a
libimagedata_a_SOURCES =
nodist_libimagedata_a_SOURCES = THEME.data

PNGS = \
	arrow.png \
	 autokeyframe.png \
	 bar.png \
	 batchcancel_dn.png \
	 batchcancel_hi.png \
	 batchcancel_up.png \
	 batchstart_dn.png \
	 batchstart_hi.png \
	 batchstart_up.png \
	 batchstop_dn.png \
	 batchstop_hi.png \
	 batchstop_up.png \
	 blank30x30.png \
	 bottom_justify.png \
	 camerakeyframe.png \
	 camera.png \
	 cancel.png \
	 cbuttons_left.png \
	 cbuttons_right.png \
	 center_justify.png \
	 channel_bg.png \
	 channel_position.png \
	 channel.png \
	 checkbox_checkedhi.png \
	 checkbox_checked.png \
	 checkbox_dn.png \
	 checkbox_hi.png \
	 checkbox_up.png \
	 clip_icon.png \
	 closetip.png \
	 cmeter_bg.png \
	 column_dn.png \
	 column_hi.png \
	 column_up.png \
	 copy.png \
	 cpanel_bg.png \
	 cpanel_checkedhi.png \
	 cpanel_checked.png \
	 cpanel_dn.png \
	 cpanel_hi.png \
	 cpanel_up.png \
	 crop.png \
	 cut.png \
	 cwindow_active.png \
	 cwindow_inactive.png \
	 delete.png \
	 drawpatch.png \
	 editpanel_checkedhi.png \
	 editpanel_checked.png \
	 editpanel_dn.png \
	 editpanel_hi.png \
	 editpanel_up.png \
	 end.png \
	 expandpatch_checkedhi.png \
	 expandpatch_checked.png \
	 expandpatch_dn.png \
	 expandpatch_hi.png \
	 expandpatch_up.png \
	 eyedrop.png \
	 fastfwd.png \
	 fastrev.png \
	 filebox_bigbutton_dn.png \
	 filebox_bigbutton_hi.png \
	 filebox_bigbutton_up.png \
	 fileboxbutton_dn.png \
	 fileboxbutton_hi.png \
	 fileboxbutton_up.png \
	 fitautos.png \
	 fit.png \
	 folder.png \
	 framefwd.png \
	 framerev.png \
	 gangpatch.png \
	 generic_dn.png \
	 generic_hi.png \
	 generic_up.png \
	 goto.png \
	 heroine_icon.png \
	 hscroll_handle_bg.png \
	 hscroll_handle_dn.png \
	 hscroll_handle_hi.png \
	 hscroll_handle_up.png \
	 hscroll_left_dn.png \
	 hscroll_left_hi.png \
	 hscroll_left_up.png \
	 hscroll_right_dn.png \
	 hscroll_right_hi.png \
	 hscroll_right_up.png \
	 hslider_bg_dn.png \
	 hslider_bg_hi.png \
	 hslider_bg_up.png \
	 hslider_fg_dn.png \
	 hslider_fg_hi.png \
	 hslider_fg_up.png \
	 ibeam.png \
	 icons.png \
	 in_checkedhi.png \
	 in_checked.png \
	 in_dn.png \
	 in_hi.png \
	 inpoint.png \
	 in_up.png \
	 keyframe3.png \
	 label_checkedhi.png \
	 label_checked.png \
	 label.png \
	 labeltoggle_dn.png \
	 labeltoggle_uphi.png \
	 labeltoggle_up.png \
	 left_justify.png \
	 listbox_button.png \
	 listbox_dn.png \
	 listbox_up.png \
	 locklabels_dn.png \
	 locklabels_lockedhi.png \
	 locklabels_locked.png \
	 locklabels_unlockedhi.png \
	 locklabels_unlocked.png \
	 magnify.png \
	 maskkeyframe.png \
	 mask.png \
	 mbutton_bg.png \
	 mclock_flat.png \
	 menubar_bg.png \
	 menubar_dn.png \
	 menubar_hi.png \
	 menubar_up.png \
	 menuitem_dn.png \
	 menuitem_hi.png \
	 menuitem_up.png \
	 menu_popup_bg.png \
	 middle_justify.png \
	 mode_add.png \
	 mode_divide.png \
	 mode_dn.png \
	 mode_hi.png \
	 modekeyframe.png \
	 mode_max.png \
	 mode_multiply.png \
	 mode_normal.png \
	 mode_replace.png \
	 mode_subtract.png \
	 mode_up.png \
	 mscroll_filler.png \
	 mutepatch_checkedhi.png \
	 mutepatch_checked.png \
	 mutepatch_dn.png \
	 mutepatch_hi.png \
	 mutepatch_up.png \
	 new_bg.png \
	 new_bigbutton_dn.png \
	 new_bigbutton_hi.png \
	 new_bigbutton_up.png \
	 nextlabel.png \
	 nexttip.png \
	 ok.png \
	 openfolder.png \
	 out_checkedhi.png \
	 out_checked.png \
	 out_dn.png \
	 out_hi.png \
	 outpoint.png \
	 out_up.png \
	 over.png \
	 overwrite.png \
	 pan_channel_small.png \
	 pan_channel.png \
	 panel_divider.png \
	 pan_hi.png \
	 pankeyframe.png \
	 pan_popup.png \
	 pan_stick_small.png \
	 pan_stick.png \
	 pan_up.png \
	 paste.png \
	 patchbay_bg.png \
	 patch_checkedhi.png \
	 patch_checked.png \
	 patch_dn.png \
	 patch_hi.png \
	 patch_up.png \
	 pause.png \
	 playpatch.png \
	 play.png \
	 plugin_bg.png \
	 plugin_ondn.png \
	 plugin_onhi.png \
	 plugin_onselecthi.png \
	 plugin_onselect.png \
	 plugin_on.png \
	 plugin_showdn.png \
	 plugin_showhi.png \
	 plugin_showselecthi.png \
	 plugin_showselect.png \
	 plugin_show.png \
	 pot_dn.png \
	 pot_hi.png \
	 pot_up.png \
	 preferences_bg.png \
	 preferencesbutton_dnhi.png \
	 preferencesbutton_dnlo.png \
	 preferencesbutton_dn.png \
	 preferencesbutton_uphi.png \
	 preferencesbutton_up.png \
	 prevlabel.png \
	 prevtip.png \
	 progress_bg.png \
	 progress_hi.png \
	 projectorkeyframe.png \
	 projector.png \
	 protect.png \
	 radial_checkedhi.png \
	 radial_checked.png \
	 radial_dn.png \
	 radial_hi.png \
	 radial_up.png \
	 recordgui_batch.png \
	 recordgui_controls.png \
	 recordgui_list.png \
	 recordmonitor_meters.png \
	 recordmonitor_panel.png \
	 recordpatch.png \
	 record.png \
	 redo.png \
	 reload.png \
	 resource1024.png \
	 resource128.png \
	 resource256.png \
	 resource32.png \
	 resource512.png \
	 resource64.png \
	 reverse.png \
	 rewind.png \
	 right_justify.png \
	 setformat_bg.png \
	 show_meters.png \
	 singleframe.png \
	 splice.png \
	 statusbar_cancel_dn.png \
	 statusbar_cancel_hi.png \
	 statusbar_cancel_up.png \
	 statusbar.png \
	 stop.png \
	 swap_extents.png \
	 text_highlight.png \
	 text.png \
	 timebar_bg_flat.png \
	 timebar_brender.png \
	 timebar_view.png \
	 tipbutton_dn.png \
	 tipbutton_hi.png \
	 tipbutton_up.png \
	 title_bg.png \
	 titlesafe.png \
	 toclip.png \
	 toolwindow.png \
	 top_justify.png \
	 transportdn.png \
	 transporthi.png \
	 transportup.png \
	 tumble_bottom.png \
	 tumble_hi.png \
	 tumble_top.png \
	 tumble_up.png \
	 undo.png \
	 updir.png \
	 vbuttons_left.png \
	 vclock.png \
	 vscroll_handle_bg.png \
	 vscroll_handle_dn.png \
	 vscroll_handle_hi.png \
	 vscroll_handle_up.png \
	 vscroll_left_dn.png \
	 vscroll_left_hi.png \
	 vscroll_left_up.png \
	 vscroll_right_dn.png \
	 vscroll_right_hi.png \
	 vscroll_right_up.png \
	 vwindow_timebar.png \
	 wrench.png \
	 xmeter_green.png \
	 xmeter_normal.png \
	 xmeter_over.png \
	 xmeter_red.png \
	 xmeter_white.png \
	 xmeter_yellow.png \
	 ymeter_green.png \
	 ymeter_normal.png \
	 ymeter_over.png \
	 ymeter_red.png \
	 ymeter_white.png \
	 ymeter_yellow.png \
	 zoompopup_dn.png \
	 zoompopup_hi.png \
	 zoompopup_up.png \
	 zoomtumble_bottom.png \
	 zoomtumble_hi.png \
	 zoomtumble_top.png \
	 zoomtumble_up.png

# this rule creates the .o file from the concatenated PNGs
.data.$(OBJEXT):
	$(OBJCOPY) -I binary -B $(OBJCOPYARCH) -O $(OBJCOPYTARGET) $< $@

THEME.data: $(PNGS)
	$(top_builddir)/guicast/bootstrap $@ $^ || { rm -f $@; exit 1; }

clean-local:
	rm -f THEME.data
 
EXTRA_DIST = \
	$(PNGS) \
	 arrow.svg \
	 autokeyframe.svg \
	 bar.svg \
	 batchcancel_dn.svg \
	 batchcancel_hi.svg \
	 batchcancel_up.svg \
	 batchstart_dn.svg \
	 batchstart_hi.svg \
	 batchstart_up.svg \
	 batchstop_dn.svg \
	 batchstop_hi.svg \
	 batchstop_up.svg \
	 blank30x30.svg \
	 bottom_justify.svg \
	 camerakeyframe.svg \
	 camera.svg \
	 cancel.svg \
	 cbuttons_left.svg \
	 cbuttons_right.svg \
	 center_justify.svg \
	 channel_bg.svg \
	 channel_position.svg \
	 channel.svg \
	 checkbox_checkedhi.svg \
	 checkbox_checked.svg \
	 checkbox_dn.svg \
	 checkbox_hi.svg \
	 checkbox_up.svg \
	 clip_icon.svg \
	 closetip.svg \
	 cmeter_bg.svg \
	 column_dn.svg \
	 column_hi.svg \
	 column_up.svg \
	 copy.svg \
	 cpanel_bg.svg \
	 cpanel_checkedhi.svg \
	 cpanel_checked.svg \
	 cpanel_dn.svg \
	 cpanel_hi.svg \
	 cpanel_up.svg \
	 crop.svg \
	 cut.svg \
	 cwindow_active.svg \
	 cwindow_inactive.svg \
	 delete.svg \
	 drawpatch.svg \
	 editpanel_checkedhi.svg \
	 editpanel_checked.svg \
	 editpanel_dn.svg \
	 editpanel_hi.svg \
	 editpanel_up.svg \
	 end.svg \
	 expandpatch_checkedhi.svg \
	 expandpatch_checked.svg \
	 expandpatch_dn.svg \
	 expandpatch_hi.svg \
	 expandpatch_up.svg \
	 eyedrop.svg \
	 fastfwd.svg \
	 fastrev.svg \
	 filebox_bigbutton_dn.svg \
	 filebox_bigbutton_hi.svg \
	 filebox_bigbutton_up.svg \
	 fileboxbutton_dn.svg \
	 fileboxbutton_hi.svg \
	 fileboxbutton_up.svg \
	 fitautos.svg \
	 fit.svg \
	 folder.svg \
	 framefwd.svg \
	 framerev.svg \
	 gangpatch.svg \
	 generic_dn.svg \
	 generic_hi.svg \
	 generic_up.svg \
	 goto.svg \
	 heroine_icon.svg \
	 hscroll_handle_bg.svg \
	 hscroll_handle_dn.svg \
	 hscroll_handle_hi.svg \
	 hscroll_handle_up.svg \
	 hscroll_left_dn.svg \
	 hscroll_left_hi.svg \
	 hscroll_left_up.svg \
	 hscroll_right_dn.svg \
	 hscroll_right_hi.svg \
	 hscroll_right_up.svg \
	 hslider_bg_dn.svg \
	 hslider_bg_hi.svg \
	 hslider_bg_up.svg \
	 hslider_fg_dn.svg \
	 hslider_fg_hi.svg \
	 hslider_fg_up.svg \
	 ibeam.svg \
	 icons.svg \
	 in_checkedhi.svg \
	 in_checked.svg \
	 in_dn.svg \
	 in_hi.svg \
	 inpoint.svg \
	 in_up.svg \
	 keyframe3.svg \
	 label_checkedhi.svg \
	 label_checked.svg \
	 label.svg \
	 labeltoggle_dn.svg \
	 labeltoggle_uphi.svg \
	 labeltoggle_up.svg \
	 left_justify.svg \
	 listbox_button.svg \
	 listbox_dn.svg \
	 listbox_up.svg \
	 locklabels_dn.svg \
	 locklabels_lockedhi.svg \
	 locklabels_locked.svg \
	 locklabels_unlockedhi.svg \
	 locklabels_unlocked.svg \
	 magnify.svg \
	 maskkeyframe.svg \
	 mask.svg \
	 mbutton_bg.svg \
	 mclock_flat.svg \
	 menubar_bg.svg \
	 menubar_dn.svg \
	 menubar_hi.svg \
	 menubar_up.svg \
	 menuitem_dn.svg \
	 menuitem_hi.svg \
	 menuitem_up.svg \
	 menu_popup_bg.svg \
	 middle_justify.svg \
	 mode_add.svg \
	 mode_divide.svg \
	 mode_dn.svg \
	 mode_hi.svg \
	 modekeyframe.svg \
	 mode_max.svg \
	 mode_multiply.svg \
	 mode_normal.svg \
	 mode_replace.svg \
	 mode_subtract.svg \
	 mode_up.svg \
	 mscroll_filler.svg \
	 mutepatch_checkedhi.svg \
	 mutepatch_checked.svg \
	 mutepatch_dn.svg \
	 mutepatch_hi.svg \
	 mutepatch_up.svg \
	 new_bg.svg \
	 new_bigbutton_dn.svg \
	 new_bigbutton_hi.svg \
	 new_bigbutton_up.svg \
	 nextlabel.svg \
	 nexttip.svg \
	 ok.svg \
	 openfolder.svg \
	 out_checkedhi.svg \
	 out_checked.svg \
	 out_dn.svg \
	 out_hi.svg \
	 outpoint.svg \
	 out_up.svg \
	 over.svg \
	 overwrite.svg \
	 pan_channel_small.svg \
	 pan_channel.svg \
	 panel_divider.svg \
	 pan_hi.svg \
	 pankeyframe.svg \
	 pan_popup.svg \
	 pan_stick_small.svg \
	 pan_stick.svg \
	 pan_up.svg \
	 paste.svg \
	 patchbay_bg.svg \
	 patch_checkedhi.svg \
	 patch_checked.svg \
	 patch_dn.svg \
	 patch_hi.svg \
	 patch_up.svg \
	 pause.svg \
	 playpatch.svg \
	 play.svg \
	 plugin_bg.svg \
	 plugin_ondn.svg \
	 plugin_onhi.svg \
	 plugin_onselecthi.svg \
	 plugin_onselect.svg \
	 plugin_on.svg \
	 plugin_showdn.svg \
	 plugin_showhi.svg \
	 plugin_showselecthi.svg \
	 plugin_showselect.svg \
	 plugin_show.svg \
	 pot_dn.svg \
	 pot_hi.svg \
	 pot_up.svg \
	 preferences_bg.svg \
	 preferencesbutton_dnhi.svg \
	 preferencesbutton_dnlo.svg \
	 preferencesbutton_dn.svg \
	 preferencesbutton_uphi.svg \
	 preferencesbutton_up.svg \
	 prevlabel.svg \
	 prevtip.svg \
	 progress_bg.svg \
	 progress_hi.svg \
	 projectorkeyframe.svg \
	 projector.svg \
	 protect.svg \
	 radial_checkedhi.svg \
	 radial_checked.svg \
	 radial_dn.svg \
	 radial_hi.svg \
	 radial_up.svg \
	 recordgui_batch.svg \
	 recordgui_controls.svg \
	 recordgui_list.svg \
	 recordmonitor_meters.svg \
	 recordmonitor_panel.svg \
	 recordpatch.svg \
	 record.svg \
	 redo.svg \
	 reload.svg \
	 resource1024.svg \
	 resource128.svg \
	 resource256.svg \
	 resource32.svg \
	 resource512.svg \
	 resource64.svg \
	 reverse.svg \
	 rewind.svg \
	 right_justify.svg \
	 setformat_bg.svg \
	 show_meters.svg \
	 singleframe.svg \
	 splice.svg \
	 statusbar_cancel_dn.svg \
	 statusbar_cancel_hi.svg \
	 statusbar_cancel_up.svg \
	 statusbar.svg \
	 stop.svg \
	 swap_extents.svg \
	 text_highlight.svg \
	 text.svg \
	 timebar_bg_flat.svg \
	 timebar_brender.svg \
	 timebar_view.svg \
	 tipbutton_dn.svg \
	 tipbutton_hi.svg \
	 tipbutton_up.svg \
	 title_bg.svg \
	 titlesafe.svg \
	 toclip.svg \
	 toolwindow.svg \
	 top_justify.svg \
	 transportdn.svg \
	 transporthi.svg \
	 transportup.svg \
	 tumble_bottom.svg \
	 tumble_hi.svg \
	 tumble_top.svg \
	 tumble_up.svg \
	 undo.svg \
	 updir.svg \
	 vbuttons_left.svg \
	 vclock.svg \
	 vscroll_handle_bg.svg \
	 vscroll_handle_dn.svg \
	 vscroll_handle_hi.svg \
	 vscroll_handle_up.svg \
	 vscroll_left_dn.svg \
	 vscroll_left_hi.svg \
	 vscroll_left_up.svg \
	 vscroll_right_dn.svg \
	 vscroll_right_hi.svg \
	 vscroll_right_up.svg \
	 vwindow_timebar.svg \
	 wrench.svg \
	 xmeter_green.svg \
	 xmeter_normal.svg \
	 xmeter_over.svg \
	 xmeter_red.svg \
	 xmeter_white.svg \
	 xmeter_yellow.svg \
	 ymeter_green.svg \
	 ymeter_normal.svg \
	 ymeter_over.svg \
	 ymeter_red.svg \
	 ymeter_white.svg \
	 ymeter_yellow.svg \
	 zoompopup_dn.svg \
	 zoompopup_hi.svg \
	 zoompopup_up.svg \
	 zoomtumble_bottom.svg \
	 zoomtumble_hi.svg \
	 zoomtumble_top.svg \
	 zoomtumble_up.svg
